@@ -39,8 +39,8 @@ public class SerialBlock extends AbstractComposedBlock<Block> {
 
     public SerialBlock(List<Block> blocks) {
         super(SERIAL, blocks);
-        if (blocks.size() == 1 && blocks.get(0).getType() == SERIAL) {
-            subBlocks = ((SerialBlock) blocks.get(0)).getSubBlocks();
+        if (blocks.size() == 1 && blocks.getFirst().getType() == SERIAL) {
+            subBlocks = ((SerialBlock) blocks.getFirst()).getSubBlocks();
         } else {
             subBlocks = new ArrayList<>(blocks);
         }
@@ -122,10 +122,10 @@ public class SerialBlock extends AbstractComposedBlock<Block> {
     }
 
     public Optional<Extremity> whichExtremity(Block block) {
-        if (block.equals(subBlocks.get(0))) {
+        if (block.equals(subBlocks.getFirst())) {
             return Optional.of(Extremity.START);
         }
-        if (block.equals(subBlocks.get(subBlocks.size() - 1))) {
+        if (block.equals(subBlocks.getLast())) {
             return Optional.of(Extremity.END);
         }
         return Optional.empty();
@@ -135,7 +135,7 @@ public class SerialBlock extends AbstractComposedBlock<Block> {
         List<Block> subBlocksCopy = new ArrayList<>(subBlocks);
         subBlocksCopy.removeAll(blocks);
         if (subBlocksCopy.size() == 1) {
-            return subBlocksCopy.get(0);
+            return subBlocksCopy.getFirst();
         } else {
             return new SerialBlock(subBlocksCopy);
         }
@@ -144,7 +144,7 @@ public class SerialBlock extends AbstractComposedBlock<Block> {
     private void insertBlock(Block block, Extremity myExtremity) {
         block.setParentBlock(this);
         if (myExtremity == Extremity.START) {
-            subBlocks.add(0, block);
+            subBlocks.addFirst(block);
         } else {
             subBlocks.add(block);
         }
@@ -152,11 +152,11 @@ public class SerialBlock extends AbstractComposedBlock<Block> {
     }
 
     public Block getUpperBlock() {
-        return subBlocks.get(subBlocks.size() - 1);
+        return subBlocks.getLast();
     }
 
     public Block getLowerBlock() {
-        return subBlocks.get(0);
+        return subBlocks.getFirst();
     }
 
     public List<Node> getChainingNodes() {
